# gcphotom

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SIMULATION.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/plans/: constant_max_sources.md  contamination_plan.md  gcmodel_refactor.md
examples/: check_galsim_photon_shooting.py  check_model_shape_fix.py  check_sensor_effects.py  cog_vs_model.py  compare_robust_losses.py  flux_reconstruction_quality.py  galsim_gaia_photon_shooting.py  galsim_gc_comparison.py  mc_bias.py  mc_flux_bias_coverage.py  mc_gaia_bias.py  mc_grid_bias.py  poorly_reconstructed_stars.py  psf_residual_demo.py  semi_realistic_simulations.py
src/gcphotom/: __init__.py  aperture.py  background.py  chromatic.py  cli.py  gaia_catalog.py  galsim_simulator.py  gcmodel.py  jaxfitter.py  match.py  montecarlo.py  plots.py  psf_photometry.py  simulator.py  stats.py
src/gcphotom/surveys/: snls.py
tests/: test_aperture.py  test_background.py  test_chromatic.py  test_gaia_catalog.py  test_galsim_simulator.py  test_gcmodel.py  test_match.py  test_montecarlo.py  test_plots.py  test_psf_photometry.py  test_simulator.py  test_snls.py  test_stats.py
